--- a/www/style.css
+++ b/www/style.css
@@ -88,16 +88,25 @@ footer p {
 main > div {
   margin: 0 1rem 0 1rem;
   padding: 1rem;
-  background: #444;
+  background: #666;
 }
 .signed-info {
   font-size: 0.8rem;
   margin: 0;
   padding: 0 0 0.25rem 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.signed-info a {
+  margin: 0.2rem;
+}
+@media (min-width: 500px) {
+  .signed-info {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 p.alert,
 p.success {
@@ -110,36 +119,43 @@ p.success {
 p.success {
   background: #008f00;
 }
+.sign,
+.register {
+  margin: 2rem 0;
+  padding: 0;
+}
+.register p {
+  font-size: 0.9rem;
+}
+.sign h2,
+.register h2 {
+  margin: 1rem 0 0 0;
+  padding: 0;
+}
 form {
-  margin: 1rem 0;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
 }
 form > div {
   width: 100%;
-  margin: 0.5rem 0;
+  margin: 0;
+  padding: 0;
   display: flex;
-  align-items: center;
-  flex-direction: row;
-}
-form > div > label {
-  font-size: 0.9rem;
-  width: 8rem;
+  flex-direction: column;
 }
 form > div > input {
   font-size: 1rem;
-  width: 100%;
-  padding: 0.5rem;
+  margin: 0.2rem 0;
+  padding: 0.75rem;
   border: none;
   color: #4c4a48;
-  background: #fff;
+  background: #ddd;
   border-radius: 0.3rem;
 }
 form > div > input[type="submit"] {
   padding: 1rem 0.5rem;
   color: #fff;
   background: #006b8f;
-  border-radius: 0.2rem;
+  border-radius: 0.3rem;
   transition: background-color 0.3s linear;
 }
 form > div > input[type="submit"]:hover {
