--- a/app/views/signedInfo.phtml
+++ b/app/views/signedInfo.phtml
@@ -1,4 +1,4 @@
 <div class="signed-info">
     <div>Přihlášen: <b>{email}</b></div>
-    <div><a href="?">Home</a> <a href="?a=o">Odhlásit</a></div>
+    <div><a href="?">Home</a> <a href="?a=s">Hráči</a> <a href="?a=o">Odhlásit</a></div>
 </div>
