--- a/www/style.css
+++ b/www/style.css
@@ -101,7 +101,7 @@ main > div {
 .signed-info a {
   margin: 0.2rem;
 }
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   .signed-info {
     flex-direction: row;
     justify-content: space-between;
@@ -207,4 +207,15 @@ form > div > input[type="submit"]:hover {
 }
 .question-detail > div > a {
   margin: 0.5rem 0;
+}
+.score {
+  font-size: 0.9rem;
+}
+.score li > span {
+  color: #aaa;
+  font-size: 0.8rem;
+}
+.score p {
+  margin: 1rem 0;
+  font-size: 0.8rem;
 }
