--- a/app/views/scoreList.phtml
+++ b/app/views/scoreList.phtml
@@ -3,5 +3,5 @@
     <ol>
         {content}
     </ol>
-    <p>Seznam je řazen dle úspěchu. Hráči se stejným počtem bodů jsou řazeni náhodně. Emaily jsou skryté.</p>
+    <p>Seznam je řazen dle úspěchu. Hráči se stejným počtem bodů jsou řazeni náhodně. Body se zobrazí po ukončení soutěže. Emaily jsou skryté.</p>
 </div>
